--- a/css/responsive.css
+++ b/css/responsive.css
@@ -70,5 +70,14 @@ top:72px;
 }
 
 @media only screen and (max-width:700px){
-  #navbar nav a
+  #navbar nav a {
+    display: none;
+  }
+  #navbar nav a.menu-icon {
+    display: block;
+    float: right;
+    font-size: 1.5em;
+    padding: 10px 20px;
+    width: auto;
+  }
 }
